# CaptionForge

./: .gitignore  DirectoryStructure.md  README.md  __init__.py  captionforge_claim_engine.py  captionforge_version.py  jlc_captionforge_claim_extractor_CUI_node.py  jlc_joy_caption_CUI_node.py  jlc_joy_caption_engine.py  jlc_joy_caption_lite_CUI_node.py  jlc_qwen_caption_CUI_node.py  jlc_qwen_caption_engine.py  jlc_qwen_caption_lite_CUI_node.py  pyproject.toml
assets/workflows/: CaptionForge_FullWorkflow.json
config/: captionforge_ollama_models.json
engines/: CLI_Settings.txt  captionforge_caption_prompt_kit.py  captionforge_claim_engine.py  captionforge_distiller_engine.py  captionforge_joy_space_prompt_kit.py  captionforge_model_cache.py  captionforge_pipeline_planner_engine.py  captionforge_vlm_validator_engine.py  jlc_joy_caption_engine.py  jlc_qwen_caption_engine.py
engines/experimental/: jlc_blip_caption_engine.py  jlc_florence_caption_engine.py  jlc_internvl_caption_engine.py  jlc_smolvlm_caption_engine.py
engines/run_plan/: captionforge_run_plan.py
nodes/: captionforge_ollama_model_dropdowns.py  jlc_captionforge_claim_extractor_CUI_node.py  jlc_captionforge_node.py  jlc_captionforge_pipeline_planner_node.py  jlc_captionforge_reversed_node.py  jlc_captionforge_run_plan_node.py  jlc_captionforge_template_options.py  jlc_joy_caption_CUI_node.py  jlc_joy_caption_lite_CUI_node.py  jlc_qwen_caption_CUI_node.py  jlc_qwen_caption_lite_CUI_node.py
nodes/caption_nodes/: jlc_captionforge_joy_caption_node.py  jlc_captionforge_ollama_caption_node.py  jlc_captionforge_qwen_caption_node.py  jlc_joy_caption_lite_CUI_node.py  jlc_qwen_caption_lite_CUI_node.py
nodes/experimental/: jlc_blip_caption_CUI_node.py  jlc_blip_caption_lite_CUI_node.py  jlc_florence_caption_CUI_node.py  jlc_florence_caption_lite_CUI_node.py  jlc_internvl_caption_CUI_node.py  jlc_internvl_caption_lite_CUI_node.py  jlc_smolvlm_caption_CUI_node.py  jlc_smolvlm_caption_lite_CUI_node.py
semantic_profiles/: female_character_v1.semantic_profile.json  general_v1.semantic_profile.json  image_v1_minimum.semantic_profile.json
semantic_profiles/experimental/: female_character_conservative_v1.semantic_profile.json  female_character_rich_overbroad_v1.semantic_profile.json
web/: jlc_captionforge_icons.js
